Attempt to fix state-overwrite issue that cropped up with Hooks

--- a/frontend/src/components/dropdown/dropdown.css
+++ b/frontend/src/components/dropdown/dropdown.css
@@ -31,6 +31,7 @@
   border: 1px solid rgb(235, 235, 235);
   border-radius: 2px;
   animation: dropdownmove 1s;
+  z-index: 10;
 }
 
 .dropdown-items-container > section:hover {
